--- a/src/components/accordion/Accordion.css
+++ b/src/components/accordion/Accordion.css
@@ -21,7 +21,7 @@
     line-height: 2.25rem;
     transition: .3s;
     margin: 0 .4rem 0 -.2rem;
-    color: var(--color-primary); /* the --c-link var has darker shade on lightmode for better contrast */
+    color: var(--color-text-primary);
 }
 
 .accordion__nav-item--active .accordion__icon--left {
