--- a/src/components/event/EventItem.css
+++ b/src/components/event/EventItem.css
@@ -69,12 +69,12 @@
 
 .event-item__detail {
     display: inline-block;
-    color: var(--color-text-secondary);
+    color: var(--color-text-regular);
     font-size: .9rem;
 }
 
 .event-item__icon {
-    color: var(---color-text-secondary);
+    color: var(---color-text-regular);
     padding-right: .3rem;
     line-height: inherit;
     font-size: 1.3em;
