--- a/src/components/filter/filter.css
+++ b/src/components/filter/filter.css
@@ -21,7 +21,7 @@
     font-size: .9rem;
     letter-spacing: .15em;
     font-weight: 500;
-    color: var(--color-text-tertiary);
+    color: var(--color-text-discreet);
 }
 
 .filter__items {
