--- a/src/components/jobad/JobadsListItem.css
+++ b/src/components/jobad/JobadsListItem.css
@@ -97,13 +97,13 @@
 }
 
 .jobads-item__detail {
-	color: var(--color-text-secondary);
+	color: var(--color-text-regular);
 	line-height: 1.4em;
 	font-size: .9rem;
 }
 
 .jobads-item__icon {
-	color: var(--color-text-secondary);
+	color: var(--color-text-regular);
 	padding-right: .3rem;
 	line-height: inherit;
 	font-size: 1.3em;
