--- a/src/components/markdownrender/MarkdownRender.css
+++ b/src/components/markdownrender/MarkdownRender.css
@@ -27,7 +27,7 @@
 .markdown-render__section {
     margin: 1rem 0;
     max-width: 40rem;
-    color: var(--color-text-secondary);
+    color: var(--color-text-regular);
 }
 
 .markdown-render__strong {
@@ -45,12 +45,12 @@
 }
 
 .markdown-render__li {
-    color: var(--color-text-secondary);
+    color: var(--color-text-regular);
 }
 
 .markdown-render__li:before {
     content: '\2022';
-    color: var(--color-link-primary);
+    color: var(--color-text-primary);
     font-weight: bold;
     display: inline-block;
     width: 1em;
