--- a/src/pages/event/EventPage.css
+++ b/src/pages/event/EventPage.css
@@ -50,7 +50,19 @@
 
 .event-datetime-display__day {
     font-size: 1.25rem;
-    color: var(--color-text-tertiary);
+    color: var(--color-text-discreet);
+    display: flex;
+    align-items: center;
+}
+
+.event-datetime-display__live-dot {
+    width: .8rem;
+    height: .8rem;
+    background-color: var(--color-green-500);
+    border-radius: 50%;
+    margin-right: .6rem;
+    margin-left: .3rem;
+    animation: event-ongoing-pulse 1.5s infinite;
 }
 
 .event-datetime-display__time {
@@ -64,6 +76,21 @@
     margin-right: .3rem;
 }
 
+@keyframes event-ongoing-pulse {
+    0% {
+        transform: scale(1);
+        opacity: 1;
+    }
+    50% {
+        transform: scale(1.3);
+        opacity: 0.5;
+    }
+    100% {
+        transform: scale(1);
+        opacity: 1;
+    }
+}
+
 
 .event-details__list {
     display: grid;
@@ -73,13 +100,13 @@
 }
 
 .event-details__lable {
-    color: var(--color-text-tertiary);
+    color: var(--color-text-discreet);
     display: inline-flex;
 }
 
 .event-details__info {
     font-weight: 500;
-    color: var(--color-text-secondary);
+    color: var(--color-text-regular);
 }
 
 /* lable icons */
@@ -91,7 +118,7 @@
 }
 
 .event-details__icon--lable-color {
-    color: var(--color-text-tertiary);
+    color: var(--color-text-discreet);
 }
 
 
