Resolve "fund page backgrounds using wrong variables"

--- a/src/components/accordion/Accordion.css
+++ b/src/components/accordion/Accordion.css
@@ -13,7 +13,7 @@
 }
 
 .accordion__nav-item:hover {
-    background-color: var(--c-bg-box-hover);
+    background-color: var(--color-bg-surface-raised);
 }
 
 .accordion__icon--left {
