--- a/src/components/dropdownbox/DropDownBox.css
+++ b/src/components/dropdownbox/DropDownBox.css
@@ -29,7 +29,7 @@
     width: 2.25rem;
     height: 2.25rem;
     transition: .3s;
-    color: var(--color-text-main);
+    color: var(--color-text-primary);
 }
 
 .drop-down-box--open .drop-down-box__toggle-icon {
