--- a/src/components/jobad/JobadsListItem.css
+++ b/src/components/jobad/JobadsListItem.css
@@ -111,8 +111,8 @@
 }
 
 .jobads-item__detail-overflow-number {
-	background-color: var(--c-filter-tag-bg);
-	color: var(--c-filter-tag-text);
+	background-color: var(--color-checktag-bg);
+	color: var(--color-checktag-text);
 	border-radius: 1em;
 	padding: .1rem .45rem .1rem .3rem;
 	font-size: .8em;
@@ -122,7 +122,6 @@
 
 	.jobads-item {
 		max-width: 100%;
-		background-color: var(--c-bg-main);
 	}
 
 	.jobads-item--highlight {
