Replaced navlink by next/link

--- a/src/layouts/topbar/TopBar.css
+++ b/src/layouts/topbar/TopBar.css
@@ -167,7 +167,7 @@
   padding-bottom: .6rem;
 }
 
-/* higlight active navlink */
+/* higlight active link */
 .active .mobile-nav__item, .active .mobile-nav-dropdown__item {
   color: var(--color-primary);
 }
